GearsetPOC/force-app/main/default/objects/Sharing_Points_Rules__c/Sharing_Points_Rules__c.object-meta.xml
<CustomObject>
    <label>Sharing Points Rules</label>
    <nameField>
        <displayFormat>SPR-{0000}</displayFormat>
        <label>Sharing Points Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sharing Points Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>