GearsetPOC/force-app/main/default/objects/Sharing_Points_Rules__c/fields/Maximum_Number_with_Same_Member__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_with_Same_Member__c</fullName>
    <label>Maximum Number with Same Member</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>