GearsetPOC/force-app/main/default/objects/Sharing_Points_Rules__c/fields/Maximum_Points_Received_Year__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Points_Received_Year__c</fullName>
    <label>Maximum Points Received Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>