GearsetPOC/force-app/main/default/objects/Sharing_Points_Rules__c/fields/Multiple__c.field-meta.xml
<CustomField>
    <fullName>Multiple__c</fullName>
    <label>Multiple</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>