GearsetPOC/force-app/main/default/objects/Sharing_Points_Rules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Maximum_Points_Transfer__c</columns>
    <columns>Maximum_Number_of_Unique_Users__c</columns>
    <columns>Maximum_Points_Transfer_Year__c</columns>
    <columns>Minimum_Points_Transfer__c</columns>
    <columns>Multiple__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>